--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,15 @@
 li{
     color: blueviolet;
 }
+
+.section_card{
+    background-color: aquamarine;
+    margin-bottom: 5px;
+    border: 3px solid salmon;
+    padding: 15px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
